repos/emily-python/contents/test/exec/fail/importStarPackage.em
# Test for sensible failure on import * from package
# Expect failure

from project.localPackage import *
